samples/_failures_safe/1761463318_3c5349_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38eaf453.c: In function ‘main’:
./samples/SAFE/__tmp_38eaf453.c:163:17: error: expected ‘;’ at end of input
  163 |     bellman_ford
      |                 ^
      |                 ;
./samples/SAFE/__tmp_38eaf453.c:163:5: error: expected declaration or statement at end of input
  163 |     bellman_ford
      |     ^~~~~~~~~~~~
